--- a/lecture/_toc.yml
+++ b/lecture/_toc.yml
@@ -21,6 +21,9 @@ chapters:
   - file: introduction/introduction_6.md  
     sections:
     - file: introduction/intro_python_III.ipynb
+- file: NY_recap
+  sections:
+  - file: NY_recap.ipynb
 - file: experiments/experiments.md
   sections:
     - file: experiments/intro_psychopy_I.ipynb
